rudy-db/tests/snapshots/generated_benchmarks@small-6.snap
---
source: rudy-db/tests/mod.rs
expression: addrs
---
ResolvedAddress {
    address: "0x100007d20",
}
