rudy-db/tests/snapshots/introspect_enums-10.snap
---
source: rudy-db/tests/live_introspection.rs
expression: u8_fifth_value
---
Scalar {
    ty: "U8Enum::Fifth",
    value: "5",
}
