rudy-db/tests/snapshots/introspect_enums-2.snap
---
source: rudy-db/tests/live_introspection.rs
expression: tuple_value
---
Tuple {
    ty: "TestEnum::Tuple",
    entries: [
        Scalar {
            ty: "u32",
            value: "42",
        },
        Scalar {
            ty: "String",
            value: "\"test\"",
        },
    ],
}
