rudy-db/tests/snapshots/introspect_enums-3.snap
---
source: rudy-db/tests/live_introspection.rs
expression: struct_value
---
Struct {
    ty: "TestEnum::Struct",
    fields: {
        "x": Scalar {
            ty: "f64",
            value: "3.14002",
        },
        "y": Scalar {
            ty: "f64",
            value: "2.71",
        },
    },
}
