rudy-db/tests/snapshots/introspect_enums-4.snap
---
source: rudy-db/tests/live_introspection.rs
expression: repr_c_unit_value
---
Scalar {
    ty: "ReprCEnum::Unit",
    value: "Unit",
}
