rudy-db/tests/snapshots/introspect_enums-5.snap
---
source: rudy-db/tests/live_introspection.rs
expression: repr_c_tuple_value
---
Tuple {
    ty: "ReprCEnum::Tuple",
    entries: [
        Scalar {
            ty: "u32",
            value: "99",
        },
        Scalar {
            ty: "String",
            value: "\"repr_c\"",
        },
    ],
}
