rudy-db/tests/snapshots/introspect_enums-7.snap
---
source: rudy-db/tests/live_introspection.rs
expression: u8_first_value
---
Scalar {
    ty: "U8Enum::First",
    value: "0",
}
