rudy-db/tests/snapshots/introspect_enums-8.snap
---
source: rudy-db/tests/live_introspection.rs
expression: u8_second_value
---
Scalar {
    ty: "U8Enum::Second",
    value: "1",
}
